// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChatMessage ChatMessage base demo works fine 1`] = `
<base>
  <wx-view
    class="chat-example"
  >
    <wx-view
      class="chat-example-block"
    >
      <t-chat-message
        content="{{
          Array [
            Object {
              "data": "牛顿第一定律是否适用于所有参考系？",
              "type": "text",
            },
          ]
        }}"
        role="user"
      />
    </wx-view>
  </wx-view>
</base>
`;

exports[`ChatMessage ChatMessage configure demo works fine 1`] = `
<configure>
  <wx-view
    class="chat-example"
  >
    <wx-view
      class="chat-example-block"
    >
      <t-chat-message
        content="{{
          Array [
            Object {
              "data": "牛顿第一定律是否适用于所有参考系？",
              "type": "text",
            },
          ]
        }}"
        datetime="16:38"
        name="张三"
        role="system"
      />
    </wx-view>
    <wx-view
      class="chat-example-block"
    >
      <t-chat-message
        avatar="https://tdesign.gtimg.com/site/chat-avatar.png"
        content="{{
          Array [
            Object {
              "data": "牛顿第一定律是否适用于所有参考系？",
              "type": "text",
            },
          ]
        }}"
        datetime="16:38"
        name="TDesignAI"
        role="system"
      />
    </wx-view>
    <wx-view
      class="chat-example-block"
    >
      <t-chat-message
        avatar="https://tdesign.gtimg.com/site/chat-avatar.png"
        content="{{
          Array [
            Object {
              "data": "牛顿第一定律是否适用于所有参考系？",
              "type": "text",
            },
          ]
        }}"
        datetime="16:38"
        name="TDesignAI"
        placement="right"
        role="system"
      />
    </wx-view>
    <wx-view
      class="chat-example-block"
    >
      <t-chat-message
        content="{{
          Array [
            Object {
              "data": "牛顿第一定律是否适用于所有参考系？",
              "type": "text",
            },
          ]
        }}"
        datetime="16:38"
        role="system"
      >
        <wx-view
          class="name-block"
          slot="name"
        >
          <wx-image
            src="https://tdesign.gtimg.com/site/chat-avatar.png"
          />
          <wx-view>
            Canxuan
          </wx-view>
        </wx-view>
      </t-chat-message>
    </wx-view>
  </wx-view>
</configure>
`;

exports[`ChatMessage ChatMessage content demo works fine 1`] = `
<content>
  <wx-view
    class="chat-example"
  >
    <wx-view
      class="chat-example-block"
    >
      <t-chat-message
        chatContentProps=""
        content="{{
          Array [
            Object {
              "data": Array [
                Object {
                  "fileType": "image",
                  "height": 1080,
                  "name": "avatar.jpg",
                  "size": 234234,
                  "url": "https://tdesign.gtimg.com/demo/demo-image-1.png",
                  "width": 1920,
                },
                Object {
                  "fileType": "image",
                  "height": 1080,
                  "name": "avatar2.jpg",
                  "size": 234234,
                  "url": "https://tdesign.gtimg.com/demo/demo-image-1.png",
                  "width": 1920,
                },
              ],
              "type": "attachment",
            },
            Object {
              "data": "分析以下内容，总结一篇广告策划方案",
              "type": "text",
            },
          ]
        }}"
        role="user"
      />
    </wx-view>
    <wx-view
      class="chat-example-block"
    >
      <t-chat-message
        chatContentProps=""
        content="{{
          Array [
            Object {
              "data": Array [
                Object {
                  "fileType": "image",
                  "height": 1080,
                  "name": "avatar.jpg",
                  "size": 234234,
                  "url": "https://tdesign.gtimg.com/demo/demo-image-1.png",
                  "width": 1920,
                },
              ],
              "type": "attachment",
            },
            Object {
              "data": "分析以下",
              "type": "text",
            },
          ]
        }}"
        placement="right"
        role="user"
      />
    </wx-view>
    <wx-view
      class="chat-example-block"
    >
      <t-chat-message
        chatContentProps=""
        content="{{
          Array [
            Object {
              "data": Array [
                Object {
                  "fileType": "doc",
                  "name": "word-file.doc",
                  "size": 222859,
                  "status": "success",
                  "url": "https://example.com/word-file.doc",
                },
                Object {
                  "fileType": "excel",
                  "name": "excel-file.xlsx",
                  "size": 222859,
                  "status": "success",
                  "url": "https://example.com/excel-file.xlsx",
                },
                Object {
                  "fileType": "pdf",
                  "name": "pdf-file.pdf",
                  "size": 222859,
                  "status": "success",
                  "url": "https://example.com/pdf-file.pdf",
                },
                Object {
                  "fileType": "ppt",
                  "name": "ppt-file.pptx",
                  "size": 222859,
                  "status": "success",
                  "url": "https://example.com/ppt-file.pptx",
                },
                Object {
                  "fileType": "video",
                  "name": "video-file.mp4",
                  "size": 222859,
                  "status": "success",
                  "url": "https://example.com/video-file.mp4",
                },
                Object {
                  "fileType": "file",
                  "name": "file",
                  "size": 222859,
                  "status": "success",
                  "url": "https://example.com/audio-file.mp3",
                },
              ],
              "type": "attachment",
            },
            Object {
              "data": "不，牛顿第一定律并不适用于所有参考系。它只适用于惯性参考系。",
              "type": "text",
            },
          ]
        }}"
        role="user"
      />
    </wx-view>
    <wx-view
      class="chat-example-block"
    >
      <t-chat-message
        chatContentProps=""
        content="{{
          Array [
            Object {
              "data": Array [
                Object {
                  "fileType": "doc",
                  "name": "word-file.doc",
                  "size": 222859,
                  "status": "success",
                  "url": "https://example.com/word-file.doc",
                },
                Object {
                  "fileType": "excel",
                  "name": "excel-file.xlsx",
                  "size": 222859,
                  "status": "success",
                  "url": "https://example.com/excel-file.xlsx",
                },
                Object {
                  "fileType": "pdf",
                  "name": "pdf-file.pdf",
                  "size": 222859,
                  "status": "success",
                  "url": "https://example.com/pdf-file.pdf",
                },
                Object {
                  "fileType": "ppt",
                  "name": "ppt-file.pptx",
                  "size": 222859,
                  "status": "success",
                  "url": "https://example.com/ppt-file.pptx",
                },
                Object {
                  "fileType": "video",
                  "name": "video-file.mp4",
                  "size": 222859,
                  "status": "success",
                  "url": "https://example.com/video-file.mp4",
                },
                Object {
                  "fileType": "file",
                  "name": "file",
                  "size": 222859,
                  "status": "success",
                  "url": "https://example.com/audio-file.mp3",
                },
              ],
              "type": "attachment",
            },
            Object {
              "data": "不，牛顿第一定律并不适用于所有参考系。它只适用于惯性参考系。",
              "type": "text",
            },
          ]
        }}"
        placement="right"
        role="user"
      />
    </wx-view>
    <wx-view
      class="chat-example-block"
    >
      <t-chat-message
        content="{{
          Array [
            Object {
              "data": Object {
                "text": "好的，我现在需要回答用户关于对比近3年当代偶像爱情剧并总结创作经验的问题
查询网络信息中...
根据网络搜索结果，成功案例包括《春色寄情人》《要久久爱》《你也有今天》等，但缺乏具体播放数据，需要结合行业报告总结共同特征。2022-2024年偶像爱情剧的创作经验主要集中在题材创新、现实元素融入、快节奏叙事等方面。结合行业报告和成功案例，总结出以下创作经验。",
                "title": "已完成思考（耗时3秒）",
              },
              "type": "thinking",
            },
            Object {
              "data": "不，牛顿第一定律并不适用于所有参考系。它只适用于惯性参考系。",
              "type": "text",
            },
          ]
        }}"
        role="assistant"
        status="complete"
        variant="text"
      >
        <t-chat-actionbar
          slot="actionbar"
        />
      </t-chat-message>
    </wx-view>
  </wx-view>
</content>
`;

exports[`ChatMessage ChatMessage error demo works fine 1`] = `
<error>
  <wx-view
    class="chat-example"
  >
    <wx-view
      class="chat-example-block"
    >
      <t-chat-message
        avatar="https://tdesign.gtimg.com/site/chat-avatar.png"
        content="{{
          Array [
            Object {
              "data": "´• •\`!!!请求出错",
              "type": "text",
            },
          ]
        }}"
        role="assistant"
        status="error"
      />
    </wx-view>
  </wx-view>
</error>
`;

exports[`ChatMessage ChatMessage status demo works fine 1`] = `
<status>
  <wx-view
    class="chat-example"
  >
    <wx-view
      class="chat-example-block"
    >
      <t-chat-message
        animation="gradient"
        avatar="https://tdesign.gtimg.com/site/chat-avatar.png"
        content="{{
          Array [
            Object {
              "data": "牛顿第一定律并不适用于所有参考系，它只适用于惯性参考系。在质点不受外力作用时，能够判断出质点静止或作匀速直线运动的参考系一定是惯性参考系，因此只有在惯性参考系中牛顿第一定律才适用。",
              "type": "text",
            },
          ]
        }}"
        role="assistant"
        status="pending"
      />
    </wx-view>
    <wx-view
      class="chat-example-block"
    >
      <t-chat-message
        animation="skeleton"
        avatar="https://tdesign.gtimg.com/site/chat-avatar.png"
        content="{{
          Array [
            Object {
              "data": "牛顿第一定律并不适用于所有参考系，它只适用于惯性参考系。在质点不受外力作用时，能够判断出质点静止或作匀速直线运动的参考系一定是惯性参考系，因此只有在惯性参考系中牛顿第一定律才适用。",
              "type": "text",
            },
          ]
        }}"
        role="assistant"
        status="pending"
      />
    </wx-view>
  </wx-view>
</status>
`;

exports[`ChatMessage ChatMessage style demo works fine 1`] = `
<style>
  <wx-view
    class="chat-example"
  >
    <wx-view
      class="chat-example-block"
    >
      <t-chat-message
        content="{{
          Array [
            Object {
              "data": "牛顿第一定律是否适用于所有参考系？",
              "type": "text",
            },
          ]
        }}"
        role="user"
        variant="text"
      />
    </wx-view>
    <wx-view
      class="chat-example-block"
    >
      <t-chat-message
        content="{{
          Array [
            Object {
              "data": "牛顿第一定律是否适用于所有参考系？",
              "type": "text",
            },
          ]
        }}"
        role="user"
        variant="base"
      />
    </wx-view>
    <wx-view
      class="chat-example-block"
    >
      <t-chat-message
        content="{{
          Array [
            Object {
              "data": "牛顿第一定律是否适用于所有参考系？",
              "type": "text",
            },
          ]
        }}"
        role="user"
        variant="outline"
      />
    </wx-view>
  </wx-view>
</style>
`;
